# ros2-4dof-robotic-arm

./: .gitignore  README.cd  README.md  Screencast from 2026-03-16 17-57-03.webm  accuracy_plot.py  action.txt  decision_plot.py  load.txt  motion_log.csv  plot.py  sensor_data.csv  system_output.txt  temp.txt  txt.temp  vib.txt
install/: local_setup.sh  setup.sh
install/dof4_arm_description/share/dof4_arm_description/: local_setup.sh  package.bash  package.dsv  package.sh  package.zsh
install/dof4_arm_description/share/dof4_arm_description/launch/: display.launch.py
install/dof4_arm_description/share/dof4_arm_description/urdf/: dof4_arm.urdf
install/dof4_arm_ros2/share/ament_index/resource_index/parent_prefix_path/: dof4_arm_ros2
install/dof4_arm_ros2/share/dof4_arm_ros2/: local_setup.sh  package.bash  package.dsv  package.sh  package.xml  package.zsh
install/dof4_arm_ros2/share/dof4_arm_ros2/cmake/: dof4_arm_ros2Config.cmake
log/: latest_build
ml_model/: model.pkl
src/dof4_arm_description/: CMakeLists.txt  README.md
src/dof4_arm_description/launch/: display.launch.py
src/dof4_arm_description/urdf/: dof4_arm.urdf  dof4_arm.urdf.save
src/dof4_arm_ros2/: CMakeLists.txt  README.md
src/robot_control/: package.xml  setup.py
src/robot_control/robot_control/: load_node.py  monitor_node.py  motion_node.py  plc_node.py  temperature_node.py  vibration_node.py
