<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dof4_arm_ros2</name>
  <version>0.0.0</version>
  <description>Meta package for DOF4 robotic arm (ROS 2)</description>

  <maintainer email="divyagudghe604@gmail.com">Divya</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Execution dependency -->
  <exec_depend>dof4_arm_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
